add game detail component

--- a/frontend/src/app/components/game/game.component.html
+++ b/frontend/src/app/components/game/game.component.html
@@ -13,12 +13,12 @@
             <div class="col-12">
                 <div class = "game-list-item">
                     <div class="image-box">
-                        <img [src]="game.imageUrl" [alt]="game.name"/>
+                        <img [src]="game.imageUrl" [alt]="game.name" [routerLink]="['/games', game.id]"/>
                     </div>
                     <div class= "game-list-detail">
-                        <div class="game-name">{{game.name}}</div>
+                        <div class="game-name" [routerLink]="['/games', game.id]">{{game.name}}</div>
                         <!-- <div class="game-publisher-icon game-publisher"><i class="pi pi-tag"></i>{{game.publisher}}</div> -->
-                        <div class="game-rating"><i class="pi pi-star-fill"></i>Overall rate: </div>
+                        <div class="game-rating"><i class="pi pi-star-fill"></i>Overall rate: {{game.rating}}</div>
                         <div class="game-description">{{game.description}}</div>
                     </div> 
                     <div class="game-list-button">
@@ -28,17 +28,17 @@
             </div>
         </ng-template>
         <ng-template let-game pTemplate="gridItem">
-            <div class="col-12 md:col-6 lg:col-4">
+            <div class="col-12 md:col-6 lg:col-4 xl:col-3">
                 <div class="game-grid-item card">
                      <div class="game-grid-detail">
                         <div class="image-box">
-                            <img [src]=" game.imageUrl" [alt]="game.name"/>
+                            <img [src]=" game.imageUrl" [alt]="game.name" [routerLink]="['/games', game.id]"/>
                         </div>
-                        <div class="game-name">{{game.name}}</div>
+                        <div class="game-name" [routerLink]="['/games', game.id]">{{game.name}}</div>
                         <div class="game-description">{{game.description}}</div>
                     </div>
                     <div class="game-grid-action">
-                        <span class="game-rating"><i class="pi pi-star-fill"></i>Overall rate: </span>
+                        <span class="game-rating"><i class="pi pi-star-fill"></i>Overall rate: {{game.rating}}</span>
                         <p-button label="Add to list" icon="pi pi-plus" iconPos="right"></p-button>
                      </div> 
                 </div>
