--- a/frontend/src/app/components/game/game.component.css
+++ b/frontend/src/app/components/game/game.component.css
@@ -23,6 +23,7 @@
     object-fit: cover;
     transition: background-color 0.3s;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5); 
+    cursor: pointer;
 }
 
 .game-list-item .game-list-detail{
@@ -39,8 +40,12 @@
     font-weight: bold;
     font-size: larger;
     color: #3c3c3d;
+    cursor: pointer;
 }
 
+.game-name:hover {
+    text-decoration: underline;
+  }
 
 .game-publisher-icon{
     margin-bottom: 1rem;
@@ -95,6 +100,7 @@ i{
     object-fit: cover;
     transition: background-color 0.3s;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5); 
+    cursor: pointer;
 }
 
 .game-grid-detail{
@@ -120,7 +126,7 @@ i{
     justify-content: space-between;
 }
 
-@media (min-width: 992px) and (max-width: 1300px) {
+@media (min-width: 992px) and (max-width: 1700px) {
     .game-grid-item img {
       max-width: 90%; 
     }
@@ -134,6 +140,10 @@ i{
     .game-list-item img{
         width: 100%;
         align-items: center;
+    }
+    .game-grid-action 
+    {
+       flex-direction: column;
     }
 }
 
@@ -169,5 +179,6 @@ i{
     .game-list-item .img{
         width: 80%;
     }
+   
 
 }
