--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-dark-gray">
     <div class="container-fluid">
-      <a class="navbar-brand text-light" [routerLink]="['/home']">
+      <a class="navbar-brand text-light" href="#">
         <img src="..\..\..\assets\images\logott.png" alt="Logo" class="logo" width="30">
         Board Game App</a>
       <button class="navbar-toggler custom-toggler-icon text-light" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,20 +12,32 @@
             <a class="nav-link active text-light " aria-current="page" [routerLink]="['/home']">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-light  " [routerLink]="['/games']">Games</a>
+            <a class="nav-link text-light  " [routerLink]="['/games']">Games</a>
           </li>
         </ul>
         <ul class="navbar-nav mb-1 mb-lg-0">
           <ng-container *ngIf="(isLoggedIn$ | async) as isLoggedIn">
-            <li class="nav-item edit-link">
-              <a class="nav-link text-light">Profile</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+                Account
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item text-light" href="#">Profile</a></li>
+                <li><a class="dropdown-item text-light" href="#">Edit profile</a></li>
+                <li><a class="dropdown-item text-light" href="#">Game list</a></li>
+                <div class="dropdown-divider"></div>
+                <li><a class="dropdown-item text-light" (click)="logout()">Logout</a></li>
+              </ul>
             </li>
+            <!-- <li class="nav-item edit-link">
+              <a class="nav-link text-light">Profile</a>
+            </li> -->
             <!-- <li class="nav-item edit-link">
               <a class="nav-link text-light">Admin Panel</a>
             </li> -->
-            <li class="nav-item logout-link">
+            <!-- <li class="nav-item logout-link">
               <a class="nav-link text-light" (click)="logout()">Logout</a>
-            </li>
+            </li> -->
           </ng-container>
           <ng-container *ngIf="!(isLoggedIn$ | async)">
             <li class="nav-item">
