--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -21,7 +21,7 @@
               <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
                 Account
               </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <ul ngbDropdown class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item text-light" href="#">Profile</a></li>
                 <li><a class="dropdown-item text-light" href="#">Edit profile</a></li>
                 <li><a class="dropdown-item text-light" href="#">Game list</a></li>
