--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -1,5 +1,4 @@
 .navbar{
-  position: relative;
   position: fixed;
   top: 0;
   left: 0;
@@ -23,7 +22,23 @@
   .custom-toggler-icon{
     background-color: #ffffff;
   }
+  .navbar-nav .dropdown-menu{
+    background-color: #2b3186;
+    right: -13px;
+    left: auto;
+    border-radius: 0; 
 
+  }
+  .navbar-nav .dropdown-item {
+    padding: 8px 16px;
+    color: #ffffff; 
+  }
+
+  .navbar-nav .dropdown-item:hover {
+    cursor: pointer;
+    background-color: #192086; 
+  
+  }
   @media only screen and (max-width: 1000px) {
     .nav-link{
       font-size: 1.1rem;
