return borad game details endpoint with review

--- a/frontend/src/app/components/game/game.component.html
+++ b/frontend/src/app/components/game/game.component.html
@@ -18,8 +18,7 @@
                     <div class= "game-list-detail">
                         <div class="game-name" [routerLink]="['/games', game.id]">{{game.name}}</div>
                         <!-- <div class="game-publisher-icon game-publisher"><i class="pi pi-tag"></i>{{game.publisher}}</div> -->
-                        <div class="game-rating"><i class="pi pi-star-fill"></i>Overall rate: {{game.rating}}
-                            <div><i class="pi pi-users"></i>Voters: {{game.numOfVoters}}</div>
+                        <div class="game-rating"><i class="pi pi-star-fill"></i>Rating: {{game.rating}} 
                         </div>
 
                         <div class="game-description">{{game.description}}</div>
@@ -41,7 +40,7 @@
                         <div class="game-description">{{game.description}}</div>
                     </div>
                     <div class="game-grid-action">
-                        <span class="game-rating"><i class="pi pi-star-fill"></i>Overall rate: {{game.rating}}</span>
+                        <span class="game-rating"><i class="pi pi-star-fill"></i>Rating: {{game.rating}}</span>
                         <p-button label="Add to list" icon="pi pi-plus" iconPos="right"></p-button>
                      </div> 
                 </div>
