--- a/frontend/src/app/components/game/game.component.css
+++ b/frontend/src/app/components/game/game.component.css
@@ -36,7 +36,7 @@
 }
 
 .game-name{
-    margin-bottom: 0.4rem;
+    margin-bottom: 0.2rem;
     font-weight: bold;
     font-size: larger;
     color: #3c3c3d;
@@ -77,6 +77,11 @@
 i{
     margin-right: 5px;;
 }
+
+.pi-star-fill{
+    color: #ffd000;
+}
+
 
 .game-grid-item {
     margin: 1rem;
