--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,7 +7,7 @@
   <router-outlet></router-outlet>
 </div>
 
-<p-toast position="top-right"></p-toast> <!-- Monitoruje zmiany w komunikatach dodanych za pomoca messageService i je renderuje , tak by użytkownik je zobzcyl-->
+<p-toast position="top-right"></p-toast> 
 
 <footer>
   © Natalia Kolbusz
