--- a/frontend/src/app/components/register/register.component.css
+++ b/frontend/src/app/components/register/register.component.css
@@ -47,7 +47,7 @@ input::placeholder {
 .container button[type="submit"] {
     width: 100%;
     padding: 10px;
-    background-color: #3B82F6;;
+    background-color: #EEA47F;;
     color: white;
     border: none;
     border-radius: 5px;
@@ -55,7 +55,7 @@ input::placeholder {
 }
 
 .container button[type="submit"]:hover {
-    background-color: #4f90f8;
+    background-color: #f19364;
 }
 
 .container .link {
