--- a/frontend/src/app/components/game/game.component.css
+++ b/frontend/src/app/components/game/game.component.css
@@ -139,24 +139,24 @@ i{
     {
        flex-direction: column;
     }
-  }
+}
 
-  @media (min-width: 1100px) and (max-width: 1250px) {
-
+@media (min-width: 1251px) {
     .game-list-item .image-box{
-        width: 19%;
-    }
-    
+        width: 250px;
+    }   
+  } 
+  @media (min-width: 700px) and (max-width: 1250px) {
+    .game-list-item .image-box{
+        width: 200px;
+    }   
   } 
   
   @media (min-width: 500px) and (max-width: 1100px) {
     .list-button{
         font-size: 14px;
-    }
-    
+    }    
   }
-
-
 
 @media screen and (max-width: 1100px) {
     .game-list-item img{
