--- a/frontend/src/app/components/gameDetail/game-detail/game-detail.component.html
+++ b/frontend/src/app/components/gameDetail/game-detail/game-detail.component.html
@@ -9,10 +9,10 @@
                 <div class="game-rating"><i class="pi pi-star-fill"></i>Rating: {{gameDetails.rating}} </div>
             </div>
             <div class="game-details">
-                <div class="game-players">{{gameDetails.players}} Players </div>
-                <div class="game-time">{{gameDetails.time}}</div>
-                <div class="game-age">Age: {{gameDetails.age}}+</div>
-                <div class="game-publisher">Publisher: {{gameDetails.publisher}}</div>
+                <div class="game-players"><span class="header">Players: </span><span class="desc">{{gameDetails.players}}</span> </div>
+                <div class="game-time"><span class="header">Time: </span><span class="desc">{{gameDetails.time}}</span></div>
+                <div class="game-age"><span class="header">Age: </span><span class="desc">{{gameDetails.age}}+</span></div>
+                <div class="game-publisher"><span class="header">Publisher: </span><span class="desc">{{gameDetails.publisher}}</span></div>
             </div>   
             <div class="add-button">
                 <p-button label="Add to list" icon="pi pi-plus" iconPos="right"></p-button>
