--- a/frontend/src/app/components/gameDetail/game-detail/game-detail.component.html
+++ b/frontend/src/app/components/gameDetail/game-detail/game-detail.component.html
@@ -26,13 +26,20 @@
         </div>
         <div class = "game-reviews">
             <h6>Reviews</h6>
-            <div *ngIf="gameDetails?.reviews?.length === 0" class="no-content">No content</div>
-            <div *ngFor="let review of gameDetails?.reviews" class="game-review">
-                <span class="review-user">User: {{ review.nickName }}</span>
-                <span class="review-rating"><i class="pi pi-star-fill"></i>{{ review.rating }}</span>
-                <div class="review-desc">{{ review.reviewDescription }}</div>
-                <div class= "review-date">{{review.createdDate | date: "dd-MM-YYYY hh:mm:ss"}}</div>
-            </div>
+            <p-dataView #dv [value]="reviews"[paginator]="true" [rows]="2">
+                <ng-template let-review pTemplate="listItem">
+                    <div class="col-12">
+                        <div lass="flex flex-column xl:flex-row xl:align-items-start p-4 gap-4">
+                            <div class="top-review">
+                                <div class="review-user">{{ review.nickName }}</div>
+                                <div class= "review-date">{{review.createdDate | date: "dd-MM-YYYY hh:mm"}}</div>
+                            </div>  
+                            <div class="review-rating"><i class="pi pi-star-fill"></i>Rating: {{ review.rating }}</div>
+                            <div class="review-desc">{{ review.reviewDescription }}</div>
+                        </div> 
+                    </div>
+                </ng-template>
+            </p-dataView>   
         </div>   
     </div>
 </div>
