--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,11 +7,13 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  /* font-family: Arial, sans-serif; */
   background-color: #ffffff; 
-  color: rgb(0, 0, 0);
+  /* color: rgb(0, 0, 0); */
   width: 100%;
   height: 100%;
+  font-family: "Inter var", sans-serif;
+  color: #495057;
 }
 
 
