--- a/frontend/src/app/components/gameDetail/game-detail/game-detail.component.html
+++ b/frontend/src/app/components/gameDetail/game-detail/game-detail.component.html
@@ -6,7 +6,7 @@
         <div class="general-info">
             <div class = "game-main">
                 <div class = "game-name">{{gameDetails.name}}</div>
-                <div class="game-rating"><i class="pi pi-star-fill"></i>Rating: {{gameDetails.rating}} </div>
+                <div class="game-rating"><i class="pi pi-star-fill"></i> Rating: <span class="rating-value">{{gameDetails.rating === 0 ? '-' : gameDetails.rating}}</span></div>
             </div>
             <div class="game-details">
                 <div class="game-players"><span class="header">Players: </span><span class="desc">{{gameDetails.players}}</span> </div>
