--- a/frontend/src/app/components/user/edit-account/edit-account.component.html
+++ b/frontend/src/app/components/user/edit-account/edit-account.component.html
@@ -1,1 +1,11 @@
 <p>edit-account works!</p>
+<div class="container">
+    <div class="edit-profile">
+        <form >
+            
+        </form>
+    </div>
+    <div class="change-password">
+
+    </div>
+</div>
