--- a/frontend/src/app/components/home/home-page.component.html
+++ b/frontend/src/app/components/home/home-page.component.html
@@ -3,7 +3,7 @@
 <div *ngIf="roles">Roles: {{ roles }}</div>
 
 <div *ngIf="authService.isLoggedIn$ | async as isLoggedIn">
-    <p *ngIf="isLoggedIn">Hello, {{ authService.getParsedToken().role}}!<br>
+    <p *ngIf="isLoggedIn">Hello, {{ authService.getParsedToken().email}}!<br>
       currdate: {{currentDate}}<br>
       exp date:  {{ exp}}
     </p>
