--- a/frontend/src/app/components/user/edit-account/edit-account.component.html
+++ b/frontend/src/app/components/user/edit-account/edit-account.component.html
@@ -1,11 +1,61 @@
-<p>edit-account works!</p>
 <div class="container">
     <div class="edit-profile">
-        <form >
-            
+        <form [formGroup]="editProfileForm" (ngSubmit)="editProfile()">
+            <h2>Edit data</h2>
+            <div class="label">
+                <label>NickName: <input formControlName="nickName" type="text" pInputText placeholder="NickName"></label>
+            </div>
+            <div class="label">
+                <label>Email: <input formControlName="email" type="text" pInputText placeholder="Email"></label>
+            </div>
+            <div class="error-messages" *ngIf="editProfileForm.controls.email.invalid && (editProfileForm.controls.email.dirty || editProfileForm.controls.email.touched)"> 
+                <small *ngIf="editProfileForm.controls.email.errors?.['email']">
+                    Enter valid email.
+                </small>
+            </div>
+            <button pbutton type="submit">Edit data</button>
         </form>
     </div>
+    
     <div class="change-password">
+        <form [formGroup]="changePassForm" (ngSubmit)="changePassword()">
+            <h2>Change password</h2>
+            <div class="label">
+                <label >Old password: <input formControlName="oldPassword" type="password" placeholder="Old password"></label>
+            
+            </div>
+            <!-- <div class="error-messages" *ngIf="changePassForm.controls.newPassword.invalid && (changePassForm.controls.newPassword.dirty || changePassForm.controls.newPassword.touched)"> 
+                <small *ngIf="changePassForm.controls.newPassword.errors?.['required']">
+                    Old password is required.
+                </small>
 
+            </div> -->
+            <div class="label">
+                <label >New password: <input formControlName="newPassword" type="password" placeholder="New password"></label>
+            
+            </div>
+            <!-- <div class="error-messages" *ngIf="changePassForm.controls.newPassword.invalid && (changePassForm.controls.newPassword.dirty || changePassForm.controls.newPassword.touched)"> 
+                <small *ngIf="changePassForm.controls.newPassword.errors?.['required']">
+                    New password is required.
+                </small>
+                <small *ngIf="changePassForm.controls.newPassword.errors?.['minlength']">
+                    Passwords must be at least 8 characters long.
+                </small>
+            </div> -->
+            <div class="label">
+                <label>Confirm new password: <input formControlName="confirmNewPassword" type="password" placeholder="Confirm new password"></label>
+            </div>
+            <!-- <div class="error-messages" *ngIf="changePassForm.controls.confirmNewPassword.invalid && (changePassForm.controls.confirmNewPassword.dirty || changePassForm.controls.confirmNewPassword.touched)"> 
+                <small *ngIf="changePassForm.controls.confirmNewPassword.errors?.['required']">
+                    Confirm new password is required.
+                </small>
+            </div>
+            <div class="error-messages" *ngIf="changePassForm.errors?.['passNotMatch']">
+                <small>
+                    Passwords are diffrent.
+                </small> 
+            </div>  -->
+            <button pbutton type="submit">Change password</button>
+        </form>
     </div>
 </div>
