--- a/frontend/src/app/components/user/edit-account/edit-account.component.html
+++ b/frontend/src/app/components/user/edit-account/edit-account.component.html
@@ -31,7 +31,7 @@
 
             </div> -->
             <div class="label">
-                <label >New password: <input formControlName="newPassword" type="password" placeholder="New password"></label>
+                <label >New password: <input formControlName="password" type="password" placeholder="New password"></label>
             
             </div>
             <!-- <div class="error-messages" *ngIf="changePassForm.controls.newPassword.invalid && (changePassForm.controls.newPassword.dirty || changePassForm.controls.newPassword.touched)"> 
@@ -43,7 +43,7 @@
                 </small>
             </div> -->
             <div class="label">
-                <label>Confirm new password: <input formControlName="confirmNewPassword" type="password" placeholder="Confirm new password"></label>
+                <label>Confirm new password: <input formControlName="confirmPassword" type="password" placeholder="Confirm new password"></label>
             </div>
             <!-- <div class="error-messages" *ngIf="changePassForm.controls.confirmNewPassword.invalid && (changePassForm.controls.confirmNewPassword.dirty || changePassForm.controls.confirmNewPassword.touched)"> 
                 <small *ngIf="changePassForm.controls.confirmNewPassword.errors?.['required']">
