add edit-accout view compo

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,10 +5,9 @@
 
 <div class="content">
   <router-outlet></router-outlet>
+  <p-confirmDialog defaultFocus="reject" [style]="{width: '40vw'}"></p-confirmDialog>
 </div>
-
 <p-toast position="top-right"></p-toast> 
-
 <footer>
   © Natalia Kolbusz
 </footer>
