--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -18,7 +18,8 @@
     text-align: center;
   }
 
-  ::ng-deep .p-button {
+
+  /* ::ng-deep .p-button {
     border-radius: 5%;
     border: 1px solid #EEA47F;
     background-color: #EEA47F;
@@ -28,6 +29,7 @@
     background: #f19364;
     border-color: #f19364;
   }
+
   ::ng-deep .p-button:enabled:hover {
     background: #f19364;
     border-color: #f19364;
@@ -36,7 +38,12 @@
     outline: 0 none;
     outline-offset: 0;
     box-shadow: 0 0 0 0.2rem rgba(241, 147, 100, 0.5);
-  }
+  } */
+
+  /* ::ng-deep .p-dialog .p-dialog-footer button {
+    margin: 0.0.5rem 0 0;
+    width: auto;
+  } */
 
 
   @media only screen and (max-width: 1000px) {
