--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -1,4 +1,17 @@
-<nav class="navbar navbar-expand-lg bg-dark-gray ">
+<div class="card ">
+  <p-menubar [model]="items" [style]="{ backgroundColor: '#00539C'}">
+    <ng-template pTemplate="start">
+      <div class="board-game-header">
+        <img src="..\..\..\assets\images\logott.png" alt="Logo" class="logo" width="30">
+        <span class="board-game-title">Board Game App</span>
+      </div>
+    </ng-template>
+    <ng-template pTemplate="end">
+      
+  </ng-template>
+  </p-menubar>
+</div>
+<!-- <nav class="navbar navbar-expand-lg bg-dark-gray ">
     <div class="container-fluid">
       <a class="navbar-brand text-light" href="#">
         <img src="..\..\..\assets\images\logott.png" alt="Logo" class="logo" width="30">
@@ -41,4 +54,4 @@
     </div>
   </nav>
 
-
+ -->
