add primeng nav

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -19,7 +19,7 @@
   }
 
 
-  /* ::ng-deep .p-button {
+  ::ng-deep .p-button {
     border-radius: 5%;
     border: 1px solid #EEA47F;
     background-color: #EEA47F;
@@ -38,7 +38,7 @@
     outline: 0 none;
     outline-offset: 0;
     box-shadow: 0 0 0 0.2rem rgba(241, 147, 100, 0.5);
-  } */
+  }
 
   /* ::ng-deep .p-dialog .p-dialog-footer button {
     margin: 0.0.5rem 0 0;
