--- a/frontend/src/app/components/gameDetail/game-detail/game-detail.component.css
+++ b/frontend/src/app/components/gameDetail/game-detail/game-detail.component.css
@@ -26,6 +26,7 @@
     font-weight: 1000;
     font-size: x-large;
     color: #00539C;
+    margin-bottom: 0.3rem;
 }
 .game-rating{
     font-weight: 500;
@@ -92,6 +93,7 @@ i{
 }
 .review-user{
     margin-top: 0.5rem;
+    margin-bottom: 0.3rem;
     font-weight: bolder;
     order: 1;
     font-size: large;
