--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     min-height: 100vh; 
     width: 100%;
+    flex: 1;
   }
   
   .content {
@@ -15,7 +16,13 @@
   footer {
     background-color: #00539C;
     color: #ffffff;
+    padding: 10px;
     text-align: center;
+    align-items: center;
+    height: 40px;
+    width: 100%;
+    margin-bottom: 0;
+    z-index: 1000;
   }
 
 
