--- a/frontend/src/app/components/login/login.component.css
+++ b/frontend/src/app/components/login/login.component.css
@@ -15,13 +15,27 @@
 
 .container h2{
     text-align: center;
-    color: #000000;
     border-bottom: 2px solid #cacaca; 
     padding-bottom: 10px;
     margin-bottom: 20px;
+    font-size: x-large;
 }
 input::placeholder {
     color: #a5a5a5; 
+}
+
+::ng-deep .p-password{
+    display: block;
+    border-radius: 5px;
+    border: 1px solid #8d8d8d;
+}
+::ng-deep .p-password input{ 
+    width: 100%;
+    border: 0;
+    padding: 8px;
+}
+::ng-deep .p-password input::placeholder{
+    color: #a5a5a5;
 }
 .container .label{
     width: 100%;
@@ -35,7 +49,7 @@ input::placeholder {
 
 .container input {
     width: 100%;
-    padding: 5px; 
+    padding: 8px; 
     background-color: #ffffff ;
     border-radius: 5px;
     border: 1px solid #8d8d8d;
@@ -47,11 +61,11 @@ input::placeholder {
     width: 100%;
     padding: 10px;
     background-color: #EEA47F;
-    /* 3B82F6 */
     color: rgb(255, 255, 255);
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-size: 15px;
 }
 
 .container button[type="submit"]:hover {
